manifest/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: maven-customer-service 
spec:
  selector:
    app: maven-customer-service
  ports:
    - name: http
      port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: maven-order-service 
spec:
  selector:
    app: maven-order-service 
  ports:
    - name: http
      port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: maven-oauth2-server 
spec:
  selector:
    app: maven-oauth2-server 
  ports:
    - name: http
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: maven-admin
spec:
  selector:
    app: maven-admin
  ports:
    - name: http
      port: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: maven-oauth2-server
spec:
  selector:
    app: maven-oauth2-server
  ports:
    - name: http
      port: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: maven-config-server
spec:
  selector:
    app: maven-config-server
  ports:
    - name: http
      port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: maven-zuul-server
spec:
  selector:
    app: maven-zuul-server
  ports:
    - name: http
      port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: maven-eureka-server
spec:
  selector:
    app: maven-eureka-server
  ports:
    - name: http
      port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: wurstmeister-kafka
spec:
  selector:
    app: wurstmeister-kafka
  ports:
    - name: http
      port: 9092

---
apiVersion: v1
kind: Service
metadata:
  name: wurstmeister-zookeeper 
spec:
  selector:
    app: wurstmeister-zookeeper 
  ports:
    - name: http
      port: 2181

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
  - name: http
    port: 3306
