manifest/nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 'nginx:1.14.2'
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: web-test
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/cluster-issuer: "issuer-letsencrypt"
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
      - watchzabbix.tk
    secretName: watchzabbix-secret
  rules:
    - host: watchzabbix.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-test
                port:
                  number: 80
